BackEnd Portfolio multer + put file

--- a/03_express/public/portfolio.html
+++ b/03_express/public/portfolio.html
@@ -8,8 +8,15 @@
 
 <form method="post" action="/api/portfolios/" enctype="multipart/form-data">
     <input type="text" name="name">
+    <input type="text" name="name222">
     <input type="file" name="img">
-    <input type="submit" value="save">
+    <input type="submit" value="Post File">
+</form>
+
+<form method="post" action="/api/portfolios/" >
+    <input type="text" name="name">
+    <input type="text" name="name222">
+    <input type="submit" value="Post Json">
 </form>
 
 </body>
