BackEnd Media Helper - To WebP

--- a/03_express/public/file.html
+++ b/03_express/public/file.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="/api/helpers/converter/avatar" enctype="multipart/form-data">
+<form method="post"
+      action="/api/helpers/converter/avatar"
+      enctype="multipart/form-data">
   <input type="file" name="img">
   <input type="submit" value="Post Json">
 </form>
