--- a/03_express/public/index.html
+++ b/03_express/public/index.html
@@ -1,13 +1,1 @@
-<html>
-
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
-
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>frontvue3</title><script defer="defer" src="/js/chunk-vendors.e07580be.js"></script><script defer="defer" src="/js/app.a71e28b1.js"></script><link href="/css/chunk-vendors.0a9c252b.css" rel="stylesheet"><link href="/css/app.57676904.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but frontvue3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
